prevent overflow

--- a/styles/horizontalFeed.module.css
+++ b/styles/horizontalFeed.module.css
@@ -1,10 +1,10 @@
 .wrapper {
-    max-width: 100%;
+    /* max-width: 100%; */
     /* border: 2px solid black; */
     padding: 2rem 0;
     margin-bottom: 5rem;
     /* background-color: rgba(159, 202, 255,.2); */
-    /* overflow: hidden; */
+    overflow: hidden;
   }
   
   .affiliations{
@@ -35,4 +35,10 @@
       transform: translate3d(-100%, 0, 0);
     }
   }
+
+  /* @media only screen and (max-width: 600px){
+    .wrapper{
+      overflow-x: hidden;
+    }
+  } */
   
